--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postinstall": "wxt prepare"
   },
   "dependencies": {
+    "@wxt-dev/i18n": "^0.2.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
